# mikage

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html
assets/shaders/: color_utils.wgsl  instancing.wgsl  lighting.wgsl  math.wgsl  rotated_instancing.wgsl  scene_types.wgsl  solid.wgsl
examples/: boids.rs  clear.rs  custom_instance.rs  egui_demo.rs  instancing_2d.rs  instancing_3d.rs  orbit_camera.rs
examples/shaders/: boids_compute.wgsl  boids_render.wgsl  rotated_instancing.wgsl
src/: app.rs  context.rs  egui_integration.rs  helpers.rs  input.rs  instance_renderer.rs  lib.rs  logging.rs  runner.rs  shader_processor.rs  solid_renderer.rs  time.rs
src/camera/: camera2d.rs  mod.rs  orbit.rs
src/helpers/: buffer.rs  mesh.rs  mod.rs  scene.rs
tests/: gpu.rs
