[package]
name = "mikage"
version = "0.3.3"
edition = "2024"
license = "MIT"

[features]
default = []
webgl = ["wgpu/webgl"]

[dependencies]
wgpu = "27"
winit = "0.30"
egui = "0.33"
egui-wgpu = "0.33"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.29", features = ["bytemuck"] }

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
egui-winit = "0.33"
pollster = "0.4"

[target.'cfg(target_family = "wasm")'.dependencies]
egui-winit = { version = "0.33", default-features = false, features = ["links"] }
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "ResizeObserver", "ResizeObserverEntry", "ResizeObserverSize"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
tracing-web = "0.1"
console_error_panic_hook = "0.1"
web-time = "1"
